# cardthing

./: .cards.toml  .gitignore  Cargo.toml  README.md  mise.toml
.cards/: add-edit---clear-owner-flag.toml  checklist-test.toml  feature-x.toml  fix-bug-in-api.toml  graceful-worker-shutdown.toml  implement-feature-x.toml  init-template-for-workers.toml  per-field-cli-overrides-for-work.toml  per-worker-jj-workspaces.toml  readme-agent-worker-mode-section.toml  stale-claim-lock-stealing.toml  task.toml  truncate-appended-agent-output.toml  update-docs.toml  worker-reacts-to-file-changes.toml
.cards/prompts/: implement.md
src/: cli.rs  error.rs  lib.rs  main.rs  shell.rs
src/commands/: add.rs  checklist.rs  edit.rs  find.rs  init.rs  list.rs  mod.rs  remove.rs  serve.rs  show.rs  stats.rs  work.rs
src/models/: card.rs  config.rs  mod.rs
src/storage/: cards.rs  mod.rs
tests/: integration_tests.rs
