[package]
name = "cardthing"
version = "0.1.0"
edition = "2021"
authors = ["Mark Ryall"]
description = "A simple CLI tool for managing task cards"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
rustyline = "14.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
notify = "6"

[dev-dependencies]
tempfile = "3.8"
